--- a/src/app/pages/projects/create/compliance/compliance.component.html
+++ b/src/app/pages/projects/create/compliance/compliance.component.html
@@ -65,7 +65,7 @@
                                     <th class="sort" data-sort="cuerpo">Cuerpos legales vinculados</th>
                                     <th class="sort" data-sort="articulos">Articulos vinculados</th>
                                     <th class="sort">Avance</th>
-                                    <th class="sort">Estado</th>
+                                    <!--<th class="sort">Estado</th>-->
                                     <th class="sort">Acción</th>
                                 </tr>
                             </thead>
@@ -88,9 +88,9 @@
                                             <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%<!--{{data.avance}}--></div>
                                         </div>
                                     </td>
-                                    <td class="status"><span
+                                    <!--<td class="status"><span
                                                 class="badge badge-soft-{{data.conectado ? 'success' : 'danger'}} text-uppercase">{{data.conectado ? 'Evaluado' : 'Sin evaluar'}}</span>
-                                    </td>
+                                    </td>-->
                                     <td>
                                         
                                         <div class="d-flex gap-2">
