--- a/src/app/pages/projects/create/compliance/follow/follow.component.scss
+++ b/src/app/pages/projects/create/compliance/follow/follow.component.scss
@@ -21,3 +21,7 @@
     justify-items: center;
     align-items: center;
 }
+
+:host ::ng-deep .ck-editor__editable_inline {
+    min-height: 140px !important;
+}
