--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -52,7 +52,7 @@
                     | translate}}</span>
                 </a>
                 
-                <a [routerLink]="item.link" *ngIf="!hasItems(item) && item.onlyAdmin && validateRol(1)" class="side-nav-link-ref nav-link menu-link" (click)="toggleParentItem($event)"><!--&& userData.role == 'admin'-->
+                <a [routerLink]="item.link" *ngIf="!hasItems(item) && ((item.onlySuperAdmin && validateRol(1)) || (item.onlyAdmin && validateRol(2)))" class="side-nav-link-ref nav-link menu-link" (click)="toggleParentItem($event)"><!--&& userData.role == 'admin'-->
                   <i class="bx {{ item.icon }} icon nav-icon" *ngIf="item.icon" class=""></i>
                   <span class=""> {{ item.label | translate }}</span>
                   <span class="badge badge-pill {{item.badge.variant}}" *ngIf="item.badge">{{item.badge.text
