--- a/src/app/pages/projects/create/compliance/detail/compliance-detail.component.html
+++ b/src/app/pages/projects/create/compliance/detail/compliance-detail.component.html
@@ -27,7 +27,7 @@
                     <p><b>{{detail.data ? (detail.data.length > 0 ? detail.data.length : 0) : 0}} {{detail.data ? (detail.data.length == 1 ? 'Cuerpo legal aplicable' : 'Cuerpos Legales aplicables') : 'Cuerpos Legales aplicables'}}</b></p>
                 </div>
                 
-                <div class="col-xxl-3 col-lg-3">
+                <div class="col-xxl-2 col-lg-2">
                     <p><b>ARTICULO:</b></p>
                     <p><b>{{detail.total_articulos > 0 ? detail.total_articulos : 0}} {{detail.total_articulos == 1 ? 'Articulo aplicable' : 'Articulos aplicables'}}</b></p>
                 </div>
@@ -39,16 +39,43 @@
                         <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
                     </div>
                 </div>
+
+                <div class="col-xxl-4 col-lg-4">
+                <div class="row">
+                    <div class="col-xxl-12 col-lg-12">
+                    <h5>CUMPLIMIENTO</h5>
+                    </div>
+                    <div class="col-xxl-4 col-lg-4">
+                        <p><b>Articulos:</b></p>
+                    </div>
+                    <div class="col-xxl-6 col-lg-6">
+                        <p><b>0 No Cumple</b></p>
+                        <div class="progress progress-sm">
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <p><b>0 Cumple</b></p>
+                        <div class="progress progress-sm">
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <p><b>0 Parcial</b></p>
+                        
+                        <div class="progress progress-sm">
+                            <div class="progress-bar bg-warning" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    
+                </div>
+                </div>
                 
-                <div class="col-xxl-3 col-lg-3">
+                <!--<div class="col-xxl-3 col-lg-3">
                     <p><b>ESTADO:</b></p>
                     <p><span
                         class="badge badge-soft-danger text-uppercase">Sin evaluar</span></p>
-                </div>
+                </div>-->
             </div>
         </div>
         
-        <div class="card-footer">
+        <!--<div class="card-footer">
             <div class="row">
                 <div class="col-xxl-12 col-lg-12">
                 <h5>CUMPLIMIENTO</h5>
@@ -91,7 +118,7 @@
                 </div>
                 
             </div>
-        </div>
+        </div>-->
     </div>
 </div>
 </div>
@@ -102,13 +129,9 @@
 <div class="col-xl-12">
     <div class="card">
         <div class="card-header">
-            <div class="row">
+            <!--<div class="row">
                 
                 <div class="col-xxl-4 col-lg-4">
-                    <!--<select class="form-select" placeholder="Cuerpo Legal" data-choices data-choices-search-false
-                                id="choices-priority-input">
-                                <option value="">Cuerpo Legal</option>
-                    </select>-->
                 </div>
                 
                 <div class="col-xxl-4 col-lg-4">
@@ -129,13 +152,13 @@
                     <button class="btn btn-primary"><i class="ri-equalizer-fill"></i> Filtros</button>
                 </div>
                 
-            </div>
+            </div>-->
             <div class="row" style="margin-top: 20px;">
                 <div class="col-xxl-12 col-lg-12">
                     
                     <div class="row">
                         <div class="col-xxl-1 col-lg-1" *ngFor="let c of detail.data; let i = index;">
-                            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;cursor: pointer;" [ngClass]="{'div-texto-check': validateCuerpo(c.cuerpoLegal)}" (click)="selectCuerpo(c.cuerpoLegal)">
+                            <div style="border: 1px solid #c0c0c0;background-color: #f3f6f9;cursor: pointer;border-radius: 24px;align-items: center;display: flex;justify-content: center;padding: 10px;word-wrap: break-word;word-break: break-all;" [ngClass]="{'div-texto-check': validateCuerpo(c.cuerpoLegal)}" (click)="selectCuerpo(c.cuerpoLegal)">
                                 <h5 [ngClass]="{'texto-check': validateCuerpo(c.cuerpoLegal)}">{{c.cuerpoLegal}}</h5>
                             </div>
                         </div>
