--- a/src/app/pages/projects/create/compliance/follow/follow.component.html
+++ b/src/app/pages/projects/create/compliance/follow/follow.component.html
@@ -69,11 +69,11 @@
                     <div class="card">
                         <div class="row g-0">
                             <div class="col-md-12">
-                                <div class="card-body">      
-                                    Fecha de Evaluación
+                                <div class="card-body">
+                                    Fecha de Evaluación     
                                     <div class="row">
-                                        <div class="col-md-3">
-                                            
+                                        <div class="col-md-2">
+                                             
                                             <div class="form-icon right">
                                                 <input class="form-control form-control-icon flatpickr-input" type="text" formControlName="fecha_evaluacion" mwlFlatpickr [altInput]="true" [convertModelValue]="true">
                                                 <i class="ri-calendar-todo-fill"></i>
@@ -81,34 +81,33 @@
                                         </div>
                                         <div class="col-md-2">
                                             
-                                            <div class="form-check form-switch form-check-right form-switch-success">
-                                                    <input class="form-check-input" type="checkbox" formControlName="reportable" role="switch" id="flexSwitchCheckRightDisabled" checked>
-                                                    <label class="form-check-label" for="flexSwitchCheckRightDisabled">Es Reportable</label>
-                                                        
+                                            <div class="form-check form-switch form-check-right form-switch-success form-switch-lg" style="padding-left: 0px !important;">
+                                                    <input class="form-check-input" type="checkbox" formControlName="reportable" role="switch" id="flexSwitchCheckRightDisabled" checked style="width: 80px;">
+                                                    <label class="form-check-label" for="flexSwitchCheckRightDisabled" style="width: 150px;">Es Reportable</label>
                                             </div>
                                         </div>
                                         
                                         <div class="col-md-2">
                                             
-                                            <div class="form-check form-switch form-check-right form-switch-success">
-                                                    <input class="form-check-input" type="checkbox" formControlName="monitoreo" role="switch" id="flexSwitchCheckCheckedDisabled" checked>
-                                                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Monitoreo</label>    
+                                            <div class="form-check form-switch form-check-right form-switch-success form-switch-lg" style="padding-left: 0px !important;">
+                                                    <input class="form-check-input" type="checkbox" formControlName="monitoreo" role="switch" id="flexSwitchCheckCheckedDisabled" checked style="width: 80px;">
+                                                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled" style="width: 150px;">Es Monitoreo</label>    
                                             </div>
                                         </div>
                                         
                                         <div class="col-md-2">
                                             
-                                            <div class="form-check form-switch form-check-right form-switch-success">
-                                                    <input class="form-check-input" type="checkbox" formControlName="permiso" role="switch" id="flexSwitchCheckCheckedDisabled" checked>
-                                                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Permiso</label>    
+                                            <div class="form-check form-switch form-check-right form-switch-success form-switch-lg" style="padding-left: 0px !important;">
+                                                    <input class="form-check-input" type="checkbox" formControlName="permiso" role="switch" id="flexSwitchCheckCheckedDisabled" checked style="width: 80px;">
+                                                    <label class="form-check-label" for="flexSwitchCheckCheckedDisabled" style="width: 150px;">Es Permiso</label>    
                                             </div>
                                         </div>
                                         <div class="col-md-3">
                                             <div class="btn-group dropdown" ngbDropdown>
-                                                <button type="button" class="btn btn-primary" style="min-width:150px;" *ngIf="!status">Sin estado</button>
-                                                <button type="button" class="btn btn-success" style="min-width:150px;" *ngIf="status == 'CUMPLE'">Cumple</button>
-                                                <button type="button" class="btn btn-warning" style="min-width:150px;" *ngIf="status == 'CUMPLE PARCIALMENTE'">Parcial</button>
-                                                <button type="button" class="btn btn-danger" style="min-width:150px;" *ngIf="status == 'NO CUMPLE'">No Cumple</button>
+                                                <button type="button" class="btn btn-primary" style="min-width:100px;" *ngIf="!status">Sin estado</button>
+                                                <button type="button" class="btn btn-success" style="min-width:100px;" *ngIf="status == 'CUMPLE'">Cumple</button>
+                                                <button type="button" class="btn btn-warning" style="min-width:100px;" *ngIf="status == 'CUMPLE PARCIALMENTE'">Parcial</button>
+                                                <button type="button" class="btn btn-danger" style="min-width:100px;" *ngIf="status == 'NO CUMPLE'">No Cumple</button>
                                                 <button type="button" class="btn btn-{{!status ? 'primary' : (status == 'CUMPLE' ? 'success' : (status == 'CUMPLE PARCIALMENTE' ? 'warning' : 'danger')) }} dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  ngbDropdownToggle></button>
                                                 <div class="dropdown-menu" ngbDropdownMenu>
                                                     
@@ -179,34 +178,23 @@
                 <div class="col-xxl-12">
                     <div class="card">
                         <div class="row g-0">
-                            <div class="col-md-12">
+                            <div class="col-md-4">
                                 <div class="card-body">
                                     Adjuntar imagen de respaldo
                                     <dropzone class="dropzone_sec"></dropzone>
+                                </div>
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    Comentario
+                                    <ckeditor [editor]="Editor" data="" formControlName="comentario"></ckeditor>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-
-<div class="row" *ngIf="status == 'CUMPLE'">
-    <div class="col-lg-12">
-        <div class="card">
-            <div class="card-header">
-
-                <div class="col-xxl-12">
-                    <div class="card">
-                        <div class="row g-0">
-                            <div class="col-md-12">
-                                <div class="card-body">
-                                    Comentario
-                                    <ckeditor [editor]="Editor" data="" formControlName="comentario"></ckeditor>
-                                </div>
-                                <!--<div class="card-footer">
+            <!--<div class="card-footer">
                                     <div class="row">
                                         <div class="col-xxl-9 col-lg-9">
                                         </div>
@@ -222,12 +210,7 @@
                                             >No Cumple</button>
                                         </div>
                                     </div>
-                                </div>-->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
@@ -278,8 +261,8 @@
                         <table class="table">
                             <thead>
                                 <tr class="bg-light text-muted">
-                                    <th class="sort">Respaldo</th>
-                                    <th class="sort" data-sort="nombre">Hallazgo</th>
+                                    <th class="sort" style="width: 150px;">Respaldo</th>
+                                    <th class="sort" data-sort="nombre" style="width: 300px;">Hallazgo</th>
                                     <th class="sort" data-sort="descripcion">Descripción</th>
                                     <th class="sort" style="width: 100px;">Acción</th>
                                 </tr>
@@ -287,7 +270,7 @@
                             <tbody>
                                 <tr *ngFor="let data of HallazgosDatas" id="lj_{{data.id}}">
                                     <td><img [src]="imgView2[data.id-1]" (error)="imgError($event)" alt="user img"
-                                        class="users-avatar-shadow avatar mr-3 rounded-circle" height="64" width="64">
+                                        class="users-avatar-shadow avatar mr-3" height="64" width="64"><!--rounded-circle-->
                                     </td>
                                     <td><ngb-highlight [result]="data.nombre"
                                             [term]="service.searchTerm"></ngb-highlight>
