--- a/src/app/pages/projects/create/compliance/follow/follow.component.html
+++ b/src/app/pages/projects/create/compliance/follow/follow.component.html
@@ -106,7 +106,7 @@
                                             <div class="btn-group dropdown" ngbDropdown>
                                                 <button type="button" class="btn btn-primary" style="min-width:100px;" *ngIf="!status">Sin estado</button>
                                                 <button type="button" class="btn btn-success" style="min-width:100px;" *ngIf="status == 'CUMPLE'">Cumple</button>
-                                                <button type="button" class="btn btn-warning" style="min-width:100px;" *ngIf="status == 'CUMPLE PARCIALMENTE'">Parcial</button>
+                                                <button type="button" class="btn btn-warning" style="min-width:100px;" *ngIf="status == 'CUMPLE PARCIALMENTE'">CumpleParcial</button>
                                                 <button type="button" class="btn btn-danger" style="min-width:100px;" *ngIf="status == 'NO CUMPLE'">No Cumple</button>
                                                 <button type="button" class="btn btn-{{!status ? 'primary' : (status == 'CUMPLE' ? 'success' : (status == 'CUMPLE PARCIALMENTE' ? 'warning' : 'danger')) }} dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  ngbDropdownToggle></button>
                                                 <div class="dropdown-menu" ngbDropdownMenu>
@@ -115,7 +115,7 @@
                                                     <h5 class="font-size-13 text-muted text-truncate mn-0">Estado de la evaluación!</h5>
                                                 </div>
                                                 <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('CUMPLE')">Cumple</a>
-                                                <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('CUMPLE PARCIALMENTE')">Parcial</a>
+                                                <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('CUMPLE PARCIALMENTE')">Cumple Parcial</a>
                                                 <a class="dropdown-item" href="javascript:void(0);" (click)="changeStatus('NO CUMPLE')">No Cumple</a><!--
                                                 <div class="dropdown-divider"></div>
                                                 <a class="dropdown-item" href="#">Separated link</a>-->
@@ -174,13 +174,13 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header">
-
+                Oportunidad de mejora
                 <div class="col-xxl-12">
                     <div class="card">
                         <div class="row g-0">
                             <div class="col-md-4">
                                 <div class="card-body">
-                                    Adjuntar imagen de respaldo
+                                    Adjuntar imagen o archivo de respaldo
                                     <dropzone class="dropzone_sec"></dropzone>
                                 </div>
                             </div>
